plugins {
    id 'java'
    id 'eclipse'
}

allprojects{
    repositories {
        jcenter()
       // maven { url "https://jitpack.io" }
    }
}

repositories {
    mavenCentral()
}

group 'de.sfxr'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'com.koloboke:koloboke-api-jdk8:1.0.0'
    implementation 'com.koloboke:koloboke-impl-jdk8:1.0.0'
    implementation 'com.google.guava:guava:28.2-jre'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}
